<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Integrantes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/containerTitleIntegrantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleIntegrantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:text="@string/titleIntegrantes"
                android:textSize="8pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerContentIntegrantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/integrante1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/integrante_1" />

                <TextView
                    android:id="@+id/code1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/integrante2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/integrante_2" />

                <TextView
                    android:id="@+id/code2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/integrante3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/integrante_3" />

                <TextView
                    android:id="@+id/code3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_3" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>